Change nav links to stick footer rather than absolute position to prevent overflow, scroll the description container

--- a/css/project.css
+++ b/css/project.css
@@ -40,8 +40,22 @@ p {
     width: 19.5%; /* (187.2 / 960) * 100 */
     float: left;
     margin-right: 0.625%;
+    overflow: scroll;
     position: relative;
     text-align: center;
+}
+
+.more-wrapping {
+    min-height: 100%;
+}
+
+.description-content {
+    padding-bottom: 50px;
+
+    /* Fix to ensure margins don't collapse, and that
+    this container actually contains it's children */
+    padding-top: 1px;
+    margin-top: -1px;
 }
 
 .gallery {
@@ -130,9 +144,12 @@ h1, .client, .type {
 }
 
 nav.links-wrapper {
-    position: absolute;
+    clear: both;
+    position: relative;
     bottom: 0;
     width: 100%;
+    height: 26px;
+    margin-top: -26px;
 }
 
 .links {
